@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.5rc2
 
 	- Documentation updates (STR #365, STR #399, STR #412)
+	- Fl_File_Icon::draw() did not support drawing of complex
+	  polygons in icon descriptions (STR #???)
 	- The configure script now offers options for JPEG, PNG,
 	  and ZLIB libraries (STR #416)
 	- The first menu item in a list would not go invisible 
